--- a/Шаблон/index.html
+++ b/Шаблон/index.html
@@ -15,6 +15,9 @@
 <body>
     <h1>Start Git</h1>
     <h2>Arsenal Chempion</h2>
+
+    <h3>Create new brancch style</h3>
+
     <script src="js/script.js"></script>
 </body>
 
